# dppvalidator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms-ctx.txt  llms.txt  mkdocs.yml  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/actions/validate-dpp/: README.md  action.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml  update-vocabularies.yml
benchmarks/: __init__.py  bench_models.py  bench_validation.py  run_benchmarks.py
docs/: changelog.md  faq.md  index.md  llms-ctx.txt  llms.txt  plugins.md  robots.txt
docs/concepts/: cirpass-implementation.md  eudpp-ontology-alignment.md  untp-schema.md  validation-layers.md
docs/contributing/: SECURITY_SETUP.md  code-style.md  development-setup.md  testing.md
docs/dpp/: dpp.json  jsonschema.json
docs/errors/: CQ001.md  CQ004.md  CQ011.md  CQ016.md  CQ017.md  CQ020.md  JLD001.md  JLD002.md  JLD003.md  JLD004.md  MDL001.md  MDL002.md  MDL003.md  MDL010.md  MDL011.md  MDL012.md  MDL013.md  MDL014.md  MDL015.md  MDL016.md  MDL020.md  MDL021.md  MDL022.md  MDL030.md  MDL031.md  MDL032.md  MDL033.md  MDL040.md  MDL041.md  MDL042.md  MDL050.md  MDL051.md  MDL052.md  MDL053.md  MDL060.md  MDL061.md  MDL070.md  MDL071.md  MDL080.md  MDL081.md  (+48 more)
docs/getting-started/: installation.md  introduction.md  quickstart.md
docs/guides/: cli-usage.md  eudpp-export.md  jsonld.md  plugins.md  use-cases.md  validation.md
docs/overrides/: main.html
docs/reference/: cli.md
docs/reference/api/: exporters.md  models.md  plugins.md  validators.md
docs/stylesheets/: extra.css
docs/uv/: uv.md
examples/dppvalidator_example_plugin/: README.md  pyproject.toml
examples/dppvalidator_example_plugin/src/dppvalidator_example_plugin/: __init__.py  exporters.py  validators.py
examples/notebooks/: 01_quickstart.ipynb  02_custom_rules.ipynb  03_batch_processing.ipynb  04_jsonld_export.ipynb  05_plugin_development.ipynb
mutants/: pyproject.toml  setup.cfg
mutants/src/dppvalidator/validators/: results.py
mutants/tests/fixtures/invalid/: invalid_dates.json  missing_issuer.json
mutants/tests/fixtures/valid/: full_dpp.json
mutants/tests/fuzz/: __init__.py  test_fuzz_engine.py
mutants/tests/property/: test_property_models.py  test_property_validators.py
mutants/tests/unit/: __init__.py  test_cli.py  test_models.py  test_plugins.py  test_schemas.py  test_validators.py  test_vocabularies.py
schemas/: dpp-schema.json
scripts/: check_error_docs.py  download_cirpass_vocabularies.py  fetch_vocabularies.py  generate_error_docs.py  run_mutation_tests.sh
src/dppvalidator/: __init__.py  logging.py
src/dppvalidator/cli/: __init__.py  console.py  main.py
src/dppvalidator/cli/commands/: completions.py  doctor.py  export.py  init.py  precommit.py  schema.py  validate.py  watch.py
src/dppvalidator/exporters/: __init__.py  contexts.py  eudpp_jsonld.py  json.py  jsonld.py  protocols.py
src/dppvalidator/models/: __init__.py  base.py  claims.py  credential.py  enums.py  identifiers.py  materials.py  passport.py  performance.py  primitives.py  product.py  protocols.py
src/dppvalidator/plugins/: __init__.py  discovery.py  registry.py
src/dppvalidator/schemas/: __init__.py  cirpass_loader.py  loader.py  registry.py
src/dppvalidator/schemas/data/: README.md  untp-dpp-schema-0.6.1.json
src/dppvalidator/validators/: __init__.py  deep.py  detection.py  engine.py  errors.py  jsonld_semantic.py  layers.py  model.py  protocols.py  results.py  schema.py  semantic.py  shacl.py
src/dppvalidator/validators/rules/: __init__.py  base.py  cirpass.py  textile.py
src/dppvalidator/verifier/: __init__.py  did.py  signatures.py  verifier.py
src/dppvalidator/vocabularies/: __init__.py  cache.py  cirpass_terms.py  code_lists.py  eudpp_actors.py  eudpp_classes.py  eudpp_lca.py  eudpp_relations.py  eudpp_substances.py  loader.py  ontology.py  rdf_loader.py
src/dppvalidator/vocabularies/data/: __init__.py  countries.json  hs_codes.json  materials.json  units.json
src/dppvalidator/vocabularies/data/ontologies/: __init__.py  actors_roles_v1.5.1.ttl  eudpp_core_v1.3.1.ttl  lca_v2.0.ttl  product_dpp_v1.7.1.ttl  soc_v1.4.7.ttl
src/dppvalidator/vocabularies/data/schemas/: __init__.py  cirpass_dpp_openapi.json  cirpass_dpp_schema.json  cirpass_dpp_schema.xsd  cirpass_dpp_schema.yaml  cirpass_dpp_shacl.ttl
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/fixtures/invalid/: hazardous_no_safety.json  invalid_circularity.json  invalid_mass_fractions.json  invalid_url_format.json  missing_serial_item_level.json  wrong_type_values.json
tests/fixtures/valid/: minimal_dpp.json  product_passport_instance_0.6.1.json  untp-dpp-instance-0.6.1.json
tests/fuzz/: test_fuzz_cirpass.py  test_fuzz_engine.py
tests/integration/: __init__.py  test_cirpass_shacl_integration.py  test_cli_workflows.py  test_validation_pipeline.py
tests/property/: test_property_cirpass.py  test_property_validators.py
tests/unit/: test_cirpass_loader.py  test_cirpass_rules.py  test_cirpass_vocabulary.py  test_cli.py  test_cli_commands.py  test_cli_init.py  test_code_lists.py  test_console.py  test_credential_verifier.py  test_deep_extended.py  test_deep_validation.py  test_detection.py  test_did_resolver.py  test_doctor.py  test_engine_extended.py  test_errors.py  test_eudpp_actors.py  test_eudpp_classes.py  test_eudpp_export.py  test_eudpp_lca.py  test_eudpp_relations.py  test_eudpp_substances.py  test_exporters.py  test_init_command.py  test_jsonld_semantic_extended.py  test_jsonld_validation.py  test_logging.py  test_model_validator.py  test_models.py  test_ontology_alignment.py  test_plugins.py  test_protocols.py  test_rdf_loader.py  test_schema_dual_mode.py  test_schema_validator.py  test_schemas.py  test_semantic_rules.py  test_semantic_validator.py  test_shacl_official.py  test_signatures.py  (+11 more)
