[project]
name = "dppvalidator"
version = "0.1.0"
description = "Python library for validating Digital Product Passports (DPP) according to EU ESPR regulations and CIRPASS/UNECE ontologies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "artiso-ai" }]
keywords = [
    "dpp",
    "digital-product-passport",
    "espr",
    "cirpass",
    "validation",
    "pydantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pydantic>=2.12.5"]

[project.scripts]
dppvalidator = "dppvalidator.cli:cli"

[project.optional-dependencies]
http = ["httpx>=0.28.0"]
jsonschema = ["jsonschema>=4.23.0"]
all = ["httpx>=0.28.0", "jsonschema>=4.23.0"]

[project.urls]
Homepage = "https://github.com/artiso-ai/dppvalidator"
Repository = "https://github.com/artiso-ai/dppvalidator"
Documentation = "https://github.com/artiso-ai/dppvalidator#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dppvalidator"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "mutmut>=3.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["dppvalidator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/dppvalidator"]
branch = true

[tool.coverage.report]
fail_under = 84
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",                 # Protocol stubs
]
omit = [
    "*/protocols.py", # Protocol definitions are abstract stubs
]
